Add The Special offers section

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                         </div>
                         <blockquote>
                             <p>Большое спасибо за то ,что помогли документами , с билетами , а так же объяснили суть шенгенской визы и порекомендовали страны c их особенностями.</p>
-                            <footer>Arthur Fernandez, <cite title="Source Title">Example Inc.</cite></footer>
+                            <footer>Александр Ильченко, <cite title="Source Title">Пекарь</cite></footer>
                         </blockquote>
                     </div>
                 </div>
@@ -143,19 +143,74 @@
             </div>
             <div class="row">
                 <div class="col-md-3">
-                    <div class="pricing-table">
+                    <div class="pricing-table featured">
                         <div class="pricing-header">
-                            <div class="pt-name">Цена недели</div>
+                            <div class="pt-name">Цена<br>недели</div>
+                            <div class="featured-text">Акция</div>
                         </div>
                         <div class="pricing-body">
                             <ul>
-                                <li><i class="fa fa-plane fa-5x" aria-hidden="true"></i></li>
+                                <li><img class="img-center" src="img/stock.png" alt=""></li>
                                 <li>Мультивиза в Италию</li>
-                                <li>до <span class"big-price">150&#8364;</span></li>
+                                <li>до <span class="big-price">150&#8364;</span></li>
                             </ul>
                         </div>
                         <div class="pricing-footer">
-                            <a href="#" class="btn btn-default">Узнать</a>
+                            <a href="#" class="btn btn-main">Узнать</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="pricing-table featured">
+                        <div class="pricing-header">
+                            <div class="pt-name">Срочное оформление виз</div>
+                            <div class="featured-text">Акция</div>
+                        </div>
+                        <div class="pricing-body">
+                            <ul>
+                                <li><img class="img-center" src="img/stock.png" alt=""></li>
+                                <li>Оформление всех видов виз в кратчайшие сроки</li>
+                                <li>Рабочая виза в Польшу до <span class="big-attention">3-х недель</span>
+                            </ul>
+                        </div>
+                        <div class="pricing-footer">
+                            <a href="#" class="btn btn-main">Узнать</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="pricing-table featured">
+                        <div class="pricing-header">
+                            <div class="pt-name">Бизнес-визы на длительный срок</div>
+                            <div class="featured-text">Акция</div>
+                        </div>
+                        <div class="pricing-body">
+                            <ul>
+                                <li><img class="img-center" src="img/stock.png" alt=""></li>
+                                <li>Бизнес-виза в Люксембург</li>
+                                <li>Сроком от<br><span class="big-attention">2-х до 5-и лет</span></li>
+                            </ul>
+                        </div>
+                        <div class="pricing-footer">
+                            <a href="#" class="btn btn-main">Узнать</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="pricing-table featured">
+                        <div class="pricing-header">
+                            <div class="pt-name">Оформляем визы после отказа</div>
+                            <div class="featured-text">Акция</div>
+                        </div>
+                        <div class="pricing-body">
+                            <ul>
+                                <li><img class="img-center" src="img/stock.png" alt=""></li>
+                                <li><span class="attention">100%</span> гарантия получения визы</li>
+                                <li>Открыли <span class="attention">264 визы после одного отказа</span> и 29 виз после нескольких.</li>
+                            </ul>
+                        </div>
+                        <div class="pricing-footer">
+                            <a href="#" class="btn btn-main">Узнать</a>
                         </div>
                     </div>
                 </div>
