Add The Second Testimonial & The General Manager & The Third Testimonial & Why We

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-md-3">
+                <div class="col-md-3 col-sm-6 col-xs-12">
                     <div class="pricing-table featured">
                         <div class="pricing-header">
                             <div class="pt-name">Цена<br>недели</div>
@@ -160,10 +160,10 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-3">
+                <div class="col-md-3 col-sm-6 col-xs-12">
                     <div class="pricing-table featured">
                         <div class="pricing-header">
-                            <div class="pt-name">Срочное оформление виз</div>
+                            <div class="pt-name">Срочное<br>оформление виз</div>
                             <div class="featured-text">Акция</div>
                         </div>
                         <div class="pricing-body">
@@ -178,7 +178,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-3">
+                <div class="col-md-3 col-sm-6 col-xs-12">
                     <div class="pricing-table featured">
                         <div class="pricing-header">
                             <div class="pt-name">Бизнес-визы на длительный срок</div>
@@ -196,7 +196,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-3">
+                <div class="col-md-3 col-sm-6 col-xs-12">
                     <div class="pricing-table featured">
                         <div class="pricing-header">
                             <div class="pt-name">Оформляем визы после отказа</div>
@@ -218,6 +218,111 @@
         </div>
     </section>
     <!-- pricing-end -->
+
+    <!-- testimonail #2 - begin -->
+    <section class="testimonials pink">
+        <div class="container">
+            <div class="row">
+                <!--<div class="col-md-12">-->
+                    <div class="testimonial">
+                        <div class="col-md-3 col-sm-3 col-xs-12">
+                            <div class="testimonial-img">
+                                <img src="photo/client1.jpg" alt="">
+                            </div>
+                        </div>
+                        <div class="col-md-9 col-sm-9 col-xs-12">
+                            <blockquote>
+                                <p>Печальная экономическая ситуация нашей страны ни для кого не новость. Пришлось отправиться зарубеж, на заработки. Изначально обращалась в другие компании, которые давали мне огромный списки документов (а я домохозяйка), плюс называли не малые суммы за услуги и никаких гарантий. Обратившись в компанию "Визовая Поддержка", без труда оформила визу и вот уже 8 месяц работаю, как и планировала.</p>
+                                <footer>Name Surname, <cite title="Source Title">Медсестра</cite></footer>
+                            </blockquote>
+                        </div>
+                    </div>
+                <!--</div>-->
+            </div>
+        </div>
+    </section>
+    <!-- testimonial #2 - end -->
+
+    <!-- features-desc - begin -->
+    <section class="features-desc">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-5">
+                    <img src="photo/general.jpg" alt="" class="img-responsive">
+                    <span class="center">Генеральный директор компании “Визовая поддержка”</span>
+                </div>
+                <div class="col-md-7">
+                    <h3>Дорогие друзья! Однажды я был на вашем месте.</h3>
+                    <p>Я прекрасно понимаю как тяжело выбрать правильную страну, собрать документы соответствия , убедиться в подлинности предоставленных услуг , а так же не попасть в финансовые аферы  . Пройдя этот путь , и самому столкнувшись с неприятностями ,я встретил не мало людей, который попадали в такую же ситуацию Наша компания функционирует на рынке более 7 лет .К нам обращаться люди с других регионов , так как уверенны в компетентности и честности моих сотрудников.  По необходимости наш менеджер предоставит Вам все юридические гаранты ,сертификаты , а отзывы касательно деятельности нашей фирмы ,мы можете прочитать ,как на сайте ,так и в интернете. Всегда будем рады Вам помочь!</p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- features-decs - end -->
+
+    <!-- testimonial #3 - begin -->
+    <section class="testimonials yellow">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12">
+                    <div class="testimonial">
+                        <div class="col-md-3 col-sm-3 col-xs-12">
+                        <div class="testimonial-img">
+                            <img src="photo/client1.jpg" alt="">
+                        </div>
+                        </div>
+                        <div class="col-md-9 col-sm-9 col-xs-12">
+                        <blockquote>
+                            <p>Мне поступило предложение по работе в области разработки ПО в Дании. Честно говоря, так сложилось, что я никогда не был заграницей. И ни я ни мой круг знакомых не сталкивался с оформлением виз. Я не особо люблю общение с консультантами, менеджерами и бегать выбирать компанию не для меня. На форумах я не раз встречал название данной компании, потому и обратился. Самое главное что отзывы не подвели, мне четко назвали стоимость, озвучили требования, после чего в кратчайшие сроки оформили все необходимые документы.</p>
+                            <footer>Name Surname, <cite title="Source Title">Example Inc.</cite></footer>
+                        </blockquote>
+                        </div>
+                    </div>
+                </div>  
+            </div>
+        </div>
+    </section>
+    <!-- testimonial #3 - end -->
+    
+    <!-- adventages - begin -->
+    <section class="adventages">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-5">
+                    <div class="section-title st-center">
+                        <h3>Почему вы можете доверить оформление визы нам?</h3>
+                        <div class="adventage-img">
+                            <img src="img/passport.jpg" class="img-responsive" alt="">
+                        </div>
+                    </div>
+                </div>
+                    <div class="col-md-7">
+                        <div class="adventage">
+                            <blockquote>
+                                <h4>Наши специалисты владеют всей актуальной информацией</h4>
+                                <p>Мы окажем Вам консультационную помощь по всех возникших вопросам, поможем оформить анкету и собрать необходимые документы. Есть основной пакет документов для всех стран, но имеются отличия в зависимости от страны, в посольство которой они подаются.</p>
+                            </blockquote>
+                            <div class="adventage-num">1</div>
+                        </div>
+                        <div class="adventage">
+                            <blockquote>
+                                <h4>Наши специалисты владеют всей актуальной информацией</h4>
+                                <p>Мы окажем Вам консультационную помощь по всех возникших вопросам, поможем оформить анкету и собрать необходимые документы. Есть основной пакет документов для всех стран, но имеются отличия в зависимости от страны, в посольство которой они подаются.</p>
+                            </blockquote>
+                            <div class="adventage-num">2</div>
+                        </div>
+                        <div class="adventage">
+                            <blockquote>
+                                <h4>Наши специалисты владеют всей актуальной информацией</h4>
+                                <p>Мы окажем Вам консультационную помощь по всех возникших вопросам, поможем оформить анкету и собрать необходимые документы. Есть основной пакет документов для всех стран, но имеются отличия в зависимости от страны, в посольство которой они подаются.</p>
+                            </blockquote>
+                            <div class="adventage-num">3</div>
+                        </div>
+                    </div>
+            </div>
+        </div>
+    </section>
+    <!-- adventages - end -->
 
     <!-- js -->
     <!--
