--- a/index.html
+++ b/index.html
@@ -115,13 +115,15 @@
     <section class="testimonials orange">
         <div class="container">
             <div class="row">
-                <div class="col-md-12">
-                    <div class="testimonial">
+                <div class="testimonial">
+                    <div class="col-md-3 col-sm-3 col-xs-12">
                         <div class="testimonial-img">
                             <img src="photo/client1.jpg" alt="">
                         </div>
+                    </div>
+                    <div class="col-md-9 col-sm-9 col-xs-12">
                         <blockquote>
-                            <p>Большое спасибо за то ,что помогли документами , с билетами , а так же объяснили суть шенгенской визы и порекомендовали страны c их особенностями.</p>
+                            <p>Большое спасибо за то, что помогли документами, с билетами, а так же объяснили суть шенгенской визы и порекомендовали как быстрее оформить визу.</p>
                             <footer>Александр Ильченко, <cite title="Source Title">Пекарь</cite></footer>
                         </blockquote>
                     </div>
@@ -150,7 +152,7 @@
                         </div>
                         <div class="pricing-body">
                             <ul>
-                                <li><img class="img-center" src="img/stock.png" alt=""></li>
+                                <li><img class="img-center" src="img/plane.png" alt=""></li>
                                 <li>Мультивиза в Италию</li>
                                 <li>до <span class="big-price">150&#8364;</span></li>
                             </ul>
@@ -168,7 +170,7 @@
                         </div>
                         <div class="pricing-body">
                             <ul>
-                                <li><img class="img-center" src="img/stock.png" alt=""></li>
+                                <li><img class="img-center" src="img/hand.png" alt=""></li>
                                 <li>Оформление всех видов виз в кратчайшие сроки</li>
                                 <li>Рабочая виза в Польшу до <span class="big-attention">3-х недель</span>
                             </ul>
@@ -186,7 +188,7 @@
                         </div>
                         <div class="pricing-body">
                             <ul>
-                                <li><img class="img-center" src="img/stock.png" alt=""></li>
+                                <li><img class="img-center" src="img/multi.png" alt=""></li>
                                 <li>Бизнес-виза в Люксембург</li>
                                 <li>Сроком от<br><span class="big-attention">2-х до 5-и лет</span></li>
                             </ul>
@@ -204,7 +206,7 @@
                         </div>
                         <div class="pricing-body">
                             <ul>
-                                <li><img class="img-center" src="img/stock.png" alt=""></li>
+                                <li><img class="img-center" src="img/pass.png" alt=""></li>
                                 <li><span class="attention">100%</span> гарантия получения визы</li>
                                 <li>Открыли <span class="attention">264 визы после одного отказа</span> и 29 виз после нескольких.</li>
                             </ul>
@@ -252,8 +254,8 @@
                     <span class="center">Генеральный директор компании “Визовая поддержка”</span>
                 </div>
                 <div class="col-md-7">
-                    <h3>Дорогие друзья! Однажды я был на вашем месте.</h3>
-                    <p>Я прекрасно понимаю как тяжело выбрать правильную страну, собрать документы соответствия , убедиться в подлинности предоставленных услуг , а так же не попасть в финансовые аферы  . Пройдя этот путь , и самому столкнувшись с неприятностями ,я встретил не мало людей, который попадали в такую же ситуацию Наша компания функционирует на рынке более 7 лет .К нам обращаться люди с других регионов , так как уверенны в компетентности и честности моих сотрудников.  По необходимости наш менеджер предоставит Вам все юридические гаранты ,сертификаты , а отзывы касательно деятельности нашей фирмы ,мы можете прочитать ,как на сайте ,так и в интернете. Всегда будем рады Вам помочь!</p>
+                    <h3>Дорогие друзья!<br>Однажды я был на вашем месте.</h3>
+                    <p>Я прекрасно понимаю как тяжело выбрать правильную страну, собрать документы соответствия, убедиться в подлинности предоставленных услуг, а так же не попасть в финансовые аферы. Пройдя этот путь, и самому столкнувшись с неприятностями, я встретил не мало людей, который попадали в такую же ситуацию. Наша компания работает на рынке более 7 лет. К нам обращаться люди с других регионов, так как уверенны в компетентности и честности наших сотрудников. По необходимости наш менеджер предоставит Вам все юридические гарантии, разрешительные документы, а отзывы, касательно деятельности нашей фирмы, вы можете прочитать, как на сайте, так и в интернете на профильных форумах. Всегда будем рады Вам помочь!</p>
                 </div>
             </div>
         </div>
@@ -273,8 +275,8 @@
                         </div>
                         <div class="col-md-9 col-sm-9 col-xs-12">
                         <blockquote>
-                            <p>Мне поступило предложение по работе в области разработки ПО в Дании. Честно говоря, так сложилось, что я никогда не был заграницей. И ни я ни мой круг знакомых не сталкивался с оформлением виз. Я не особо люблю общение с консультантами, менеджерами и бегать выбирать компанию не для меня. На форумах я не раз встречал название данной компании, потому и обратился. Самое главное что отзывы не подвели, мне четко назвали стоимость, озвучили требования, после чего в кратчайшие сроки оформили все необходимые документы.</p>
-                            <footer>Name Surname, <cite title="Source Title">Example Inc.</cite></footer>
+                            <p class="black">Мне поступило предложение по работе в области разработки ПО в Дании. Честно говоря, так сложилось, что я никогда не был заграницей. И ни я ни мой круг знакомых не сталкивался с оформлением виз. Я не особо люблю общение с консультантами, менеджерами и бегать выбирать компанию не для меня. На форумах я не раз встречал название данной компании, потому и обратился. Самое главное что отзывы не подвели, мне четко назвали стоимость, озвучили требования, после чего в кратчайшие сроки оформили все необходимые документы.</p>
+                            <footer class="black">Name Surname, <cite title="Source Title">Example Inc.</cite></footer>
                         </blockquote>
                         </div>
                     </div>
@@ -313,8 +315,8 @@
                         </div>
                         <div class="adventage">
                             <blockquote>
-                                <h4>Наши специалисты владеют всей актуальной информацией</h4>
-                                <p>Мы окажем Вам консультационную помощь по всех возникших вопросам, поможем оформить анкету и собрать необходимые документы. Есть основной пакет документов для всех стран, но имеются отличия в зависимости от страны, в посольство которой они подаются.</p>
+                                <h4>Мы в совершенстве знаем Визовый Кодекс</h4>
+                                <p>Все посольства стран Шенгенского соглашения выдают визы в соответствии с документом, который называется "Визовый кодекс". Наши специалисты предоставят Вам исчерпывающую консультацию в этом вопросе, чтобы Вы не полагались на многочисленные вольные интерпретации в Интернете и среди знакомых.</p>
                             </blockquote>
                             <div class="adventage-num">3</div>
                         </div>
@@ -324,6 +326,159 @@
     </section>
     <!-- adventages - end -->
 
+    <!-- get-consult - begin -->
+    <section class="consultation">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6">
+                    <div class="st-title st-center">
+                        <h3>Наши клиенты получают визы, потому что у нас работают отличные специалисты.</h3>
+                        <p>Lorem ipsum dolor sit amet, eu reque errem vis, omnis detracto inimicus id nam. Munere insolens ne vis, pri no qualisque dissentias.</p>
+                        <p>Lorem ipsum dolor sit amet, eu reque errem vis, omnis detracto inimicus id nam. Munere insolens ne vis, pri no qualisque dissentias.</p>
+                    </div>
+                </div>
+                <div class="col-md-4 col-md-offset-2">
+                    <div class="get-consult">
+                        <h4>Оставьте свои контакты чтобы получить консультацию.</h4>
+                        <p>Наши консультанты всегда в сети</p>
+                    </div>
+                    <form class="get-consult-form" role="form">
+                        <div class="input">
+                            <input id="get-consult-name" type="text" class="form-control name" name="fname" placeholder="Ваше полное имя">
+                            <div class="fa-input">
+                                <i class="fa fa-user fa-2x"></i>
+                            </div>
+                        </div>
+                        <div class="input">
+                            <input id="get-consult-tel" type="tel" class="form-control tel" name="tel" placeholder="Номер Вашего телефона">
+                            <div class="fa-input">
+                                <i class="fa fa-phone fa-2x"></i>
+                            </div>
+                        </div>
+                        <button id="get-consult-btn" class="btn btn-main btn-lg" type="submit" datal-loading-text="<i class='fa fa-spinner fa-spin'></i>Отправка...">
+                            <!-- <i class="fa fa-paper-plane"></i> -->
+                            Получить консультацию
+                        </button>
+                    </form>
+                    <div id="get-consult-result" role="alert"></div>
+                </div>
+            <div>
+        </div>
+    </section>
+    <!-- get-consult - end -->
+
+    <!-- adventages # 2 - begin -->
+    <section class="adventages">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12">
+                    <div class="section-title st-center">
+                        <h3>Наши клиенты получают визы, потому что у нас работают отличные специалисты.</h3>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-12">
+                    <div class="adventage-second">
+                        <blockquote>
+                            <p>Наши сотрудники являются профессионалами своего дела с большим стажем работы, поэтому документы наших клиентов попадают первыми на очередь в консульство.</p>
+                        </blockquote>
+                    </div>
+                    <div class="adventage-second">
+                        <blockquote>
+                            <p>Наши специалисты тратят на заявление каждого клиента ровно столько времени, сколько необходимо что бы все документы были заполнены без единой ошибки, и поэтому их не возвращают на доработку или замену.</p>
+                        </blockquote>
+                    </div>
+                    <div class="adventage-second">
+                        <blockquote>
+                            <p>Мы подкрепляем заявление только реальными документами.</p>
+                        </blockquote>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- adventages # 2 - end -->
+    
+    <!-- three-steps - begin -->
+    <section class="three-steps">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12">
+                    <div class="section-title st-center">
+                        <h3>Начни оформлять визу уже сегодня!</h3>
+                    </div>
+                </div>
+                <div class="col-md-12">
+                    <div class="col-md-8">
+                        <div class="row">
+                            <p>Собери минимальный пакет документов:</p>
+                            <div class="col-md-3">
+                                <img class="circle" src="img/stock.png" alt="">
+                                <p>Паспорт</p>
+                            </div>
+                            <div class="col-md-3">
+                                <img class="circle" src="img/stock.png" alt="">
+                                <p>Фото</p>
+                            </div>
+                            <div class="col-md-3">
+                                <img class="circle" src="img/stock.png" alt="">
+                                <p>Загранпаспорт</p>
+                            </div>
+                            <div class="col-md-3">
+                                <img src="img/stock.png" alt="">
+                                <p>ИНН</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                       <p>С вами свяжется первый свободный менеджер</p>
+                        <form class="three-steps-form" role="form">
+                            <div class="input">
+                                <input id="three-steps-name" type="text" class="form-control name" name="fname" placeholder="Ваше полное имя">
+                                <div class="fa-input">
+                                    <i class="fa fa-user fa-2x"></i>
+                                </div>
+                            </div>
+                            <div class="input">
+                                <input id="three-steps-tel" type="tel" class="form-control tel" name="tel" placeholder="Номер Вашего телефона">
+                                <div class="fa-input">
+                                    <i class="fa fa-phone fa-2x"></i>
+                                </div>
+                            </div>
+                            <button id="three-steps-btn" class="btn btn-main btn-lg" type="submit" datal-loadin-text="<i class='fa fa-spinner fa-spin'></i>Отправка...">
+                                <!-- <i class="fa fa-paper-plane"></i> -->
+                                Оформить визу
+                            </button>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- three-steps - end -->
+
+    <!-- testimonial # 3 - begin -->
+    <section class="testimonials light-pink">
+        <div class="container">
+            <div class="row">
+                <div class="testimonial">
+                    <div class="col-md-3 col-sm-3 col-xs-12">
+                        <div class="testimonial-img">
+                            <img src="photo/client1.jpg" alt="">
+                        </div>
+                    </div>
+                    <div class="col-md-9 col-sm-9 col-xs-12">
+                        <blockquote>
+                            <p>Спасибо Визовой поддержке за то, что оформили документыдля рабочей поездки в Италию. Объяснили все нюансы, помогли с билетами, а главное, подготовили к собеседованию.</p>
+                            <footer>Name Surname, <cite title="Source Title">Example, Inc</cite></footer>
+                        </blockquote>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- testimonial # 3 - end -->
     <!-- js -->
     <!--
     <script src="js/jquery-3.1.1.js"></script>
