New Main background-image

--- a/index.html
+++ b/index.html
@@ -100,10 +100,12 @@
                     
                         <div class="hero-txt">
                             <p class="hero-work">Визы - Официальное Трудоустройство - ВНЖ/ПМЖ</p>
-                                <h2 class="hero-title">Виза это просто -<br>если оформлять с<br><span>БыстроВиза!</span></h2>
-                                <!--
-                                <h2 class="hero-title">Мы поможем Вам оформить визу!</h2>
-                                -->
+                            <div class="hero-title">
+                                <h2>Виза это просто!</h2>
+                                <p>
+                                    <span class="with-us">Если оформлять с</span><br><span class="brand">БыстроВиза!</span>
+                                </p>
+                            </div>
                                 <p class="hero-item">Наша компания предлагает Вам уникальную возможность оформления всех визовых документов для Вас и Ваших близких в самые быстрые сроки, даже в случае отказа и при наличии минимального пакета документов.</p>
                                 <a href="#" class="btn btn-main btn-lg" data-toggle="modal" data-target="#question">Узнать больше</a>
                         </div>
